fix collapse_content

--- a/src/css/scripts.css
+++ b/src/css/scripts.css
@@ -13,7 +13,7 @@
 .collapse_content {
     display: none;
     width: 700px;
-    max-width: 100%;
+    max-width: 80%;
     margin: 0 auto;
     padding: 20px;
     border: 1px dashed;
